# cardozd

./: README.md  docker-compose.yaml  pants.toml  pyproject.toml
backend/srvs/camp/camp/: _settings.py  admin.py  apps.py  models.py  serializers.py  settings.py  urls.py  views.py
backend/srvs/camp/camp/migrations/: 0001_initial.py  0002_companypage_post_url_post_company.py
